--- a/Data_Munging.ipynb
+++ b/Data_Munging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 87,
    "id": "a9774d08-b633-4567-a1f2-b0d58294fb27",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,8 @@
     "import re\n",
     "import matplotlib.pyplot as plt\n",
     "from wordcloud import WordCloud\n",
-    "import random"
+    "import random\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -757,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "a116dccf-62eb-4364-9fb9-ccdbdc2e72d2",
    "metadata": {},
    "outputs": [],
@@ -781,87 +782,81 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "2e5e9ab3-abe9-4291-9896-de8884626222",
+   "id": "60ba1baf-adfa-4541-a7f8-0c4bacb21fca",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>review</th>\n",
-       "      <th>recommendation</th>\n",
-       "      <th>authentic</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>gt played as german reich gt declare war on b...</td>\n",
-       "      <td>Recommended</td>\n",
-       "      <td>TRUE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>very good game although a bit overpriced in my...</td>\n",
-       "      <td>Recommended</td>\n",
-       "      <td>TRUE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>out of all the reviews i wrote this one is pro...</td>\n",
-       "      <td>Recommended</td>\n",
-       "      <td>TRUE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>disclaimer i survivor main i play games for fu...</td>\n",
-       "      <td>Recommended</td>\n",
-       "      <td>TRUE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>english after playing for more than two years ...</td>\n",
-       "      <td>Recommended</td>\n",
-       "      <td>TRUE</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              review recommendation authentic\n",
-       "0   gt played as german reich gt declare war on b...    Recommended      TRUE\n",
-       "1  very good game although a bit overpriced in my...    Recommended      TRUE\n",
-       "2  out of all the reviews i wrote this one is pro...    Recommended      TRUE\n",
-       "3  disclaimer i survivor main i play games for fu...    Recommended      TRUE\n",
-       "4  english after playing for more than two years ...    Recommended      TRUE"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "MYDF_Clean.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "31a3ab49-f0a4-4a91-adc8-81c8a8ccc73c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MYDF_Clean.to_csv('Steam_Clean_Data.csv',index=False,sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "7a2f61a7-8356-4586-8e55-79433829da35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Train_reco,Test_reco = train_test_split(MYDF_Clean, test_size = 0.25, stratify=MYDF_Clean['recommendation'], random_state = 580) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "fa08f258-43f7-467f-9d2b-6618f2f7d6d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Train_auth,Test_auth = train_test_split(MYDF_Clean, test_size = 0.25, stratify=MYDF_Clean['authentic'], random_state = 580) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "82105e94-5a22-4355-b56f-a62e25f19843",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Train_reco.to_csv('Train_reco.csv',index=False,sep=',')\n",
+    "Test_reco.to_csv('Test_reco.csv',index=False,sep=',')\n",
+    "Train_auth.to_csv('Train_auth.csv',index=False,sep=',')\n",
+    "Test_auth.to_csv('Test_auth.csv',index=False,sep=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "7d389135-f645-4447-a1e4-185f2dfa4419",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zipfile\n",
+    "with zipfile.ZipFile('Clean_Data_Set.zip',mode='a') as f:\n",
+    "    f.write('Steam_Clean_Data.csv')\n",
+    "    f.write('Train_reco.csv')\n",
+    "    f.write('Test_reco.csv')\n",
+    "    f.write('Train_auth.csv')\n",
+    "    f.write('Test_auth.csv')\n",
+    "\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0776e545-def1-429c-8dc8-3f5795b892a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
