--- a/Model/logistic.ipynb
+++ b/Model/logistic.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "6f33229f",
    "metadata": {},
    "outputs": [],
@@ -53,10 +53,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file=os.path.dirname(os.getcwd())\n",
-    "Clean_DF = pd.read_csv(file+'\\\\data\\\\Steam_Clean_Data.csv')\n",
-    "Train_reco = pd.read_csv(file+'\\\\data\\\\Train_reco.csv')\n",
-    "Test_reco = pd.read_csv(file+'\\\\data\\\\Test_reco.csv')"
+    "Clean_DF = pd.read_csv('../data/Steam_Clean_Data.csv')\n",
+    "Train_reco = pd.read_csv('../data/Train_reco.csv')\n",
+    "Test_reco = pd.read_csv('../data/Test_reco.csv')"
    ]
   },
   {
