--- a/Model/DT.ipynb
+++ b/Model/DT.ipynb
@@ -52,10 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file=os.path.dirname(os.getcwd())\n",
-    "Clean_DF = pd.read_csv(file+'\\\\data\\\\Steam_Clean_Data.csv')\n",
-    "Train_reco = pd.read_csv(file+'\\\\data\\\\Train_reco.csv')\n",
-    "Test_reco = pd.read_csv(file+'\\\\data\\\\Test_reco.csv')"
+    "Clean_DF = pd.read_csv('../data/Steam_Clean_Data.csv')\n",
+    "Train_reco = pd.read_csv('../data/Train_reco.csv')\n",
+    "Test_reco = pd.read_csv('../data/Test_reco.csv')"
    ]
   },
   {
