--- a/Model/logistic.ipynb
+++ b/Model/logistic.ipynb
@@ -433,6 +433,15 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 432x288 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -445,7 +454,8 @@
     "plt.xlabel('False Positive Rate')\n",
     "plt.ylabel('True Positive Rate')\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "plt.savefig('Logistic_ROC.png')"
    ]
   },
   {
