--- a/Model/SVM.ipynb
+++ b/Model/SVM.ipynb
@@ -265,7 +265,7 @@
     "print(bn_matrix)\n",
     "plot_confusion_matrix(svm_reco, Test_DTM_DF_reco, Test_reco['recommendation'], cmap = 'summer_r')\n",
     "plt.title(\"Linear SVC Confusion Matrix\", fontsize = 10, y = 1.01)\n",
-    "plt.savefig('../Visualizations/SVM_cm.png')\n",
+    "plt.savefig('../Visualizations/SVM_cm.jpg')\n",
     "accuracy_score(Test_reco['recommendation'], svm_predict)"
    ]
   },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "5c3528ec-a1de-459b-ab1e-d2ea4bfee76b",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
     "    plt.subplot(231+idx)\n",
     "    plot_coefficients(estimator, Train_DTM_DF_reco.columns, 10)\n",
     "    #plt.bar(x = feature_importances.index[:10:], height=feature_importances[\"importance\"][:10:])\n",
-    "    plt.savefig(\"../Visualizations/SVM_Imp.png\")"
+    "    plt.savefig(\"../Visualizations/SVM_Imp.jpg\")"
    ]
   }
  ],
