--- a/Model/logistic.ipynb
+++ b/Model/logistic.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "6f33229f",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "id": "cf7718b6",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "id": "d45746c6",
    "metadata": {},
    "outputs": [],
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "id": "22d57b62",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "id": "5344a5a6",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "id": "715e063b",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        "LogisticRegression(random_state=5)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "id": "aa10ea95",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "id": "e3aeb775",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
     "print(bn_matrix)\n",
     "plot_confusion_matrix(log_reco, Test_DTM_DF_reco, Test_reco['recommendation'], cmap = 'summer_r')\n",
     "plt.title(\"Logistic Regression Confusion Matrix\", fontsize = 10, y = 1.01)\n",
-    "plt.savefig('../Visualizations/Logistic_cm.png')\n",
+    "plt.savefig('../Visualizations/Logistic_cm.jpg')\n",
     "print(\"\\nThe accuracy of logistic regression model is:%.2f\" % accuracy_score(Test_reco['recommendation'], log_pred_reco))"
    ]
   },
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "id": "66d9c2be",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "id": "e46909f7",
    "metadata": {},
    "outputs": [],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "id": "8b358207",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "id": "fb105cc7",
    "metadata": {},
    "outputs": [],
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "id": "cdfd06dd",
    "metadata": {},
    "outputs": [
@@ -386,7 +386,7 @@
     "    plt.subplot(231+idx)\n",
     "    plot_coefficients(estimator, Train_DTM_DF_reco.columns, 10)\n",
     "    #plt.bar(x = feature_importances.index[:10:], height=feature_importances[\"importance\"][:10:])\n",
-    "    plt.savefig(\"../Visualizations/Logistic_Imp.png\")"
+    "    plt.savefig(\"../Visualizations/Logistic_Imp.jpg\")"
    ]
   },
   {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "id": "5d8b895b",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "id": "69fd85fc",
    "metadata": {},
    "outputs": [
@@ -433,15 +433,6 @@
       "needs_background": "light"
      },
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -454,8 +445,8 @@
     "plt.xlabel('False Positive Rate')\n",
     "plt.ylabel('True Positive Rate')\n",
     "plt.legend()\n",
-    "plt.show()\n",
-    "plt.savefig('Logistic_ROC.png')"
+    "plt.savefig('../Visualizations/Logistic_ROC.jpg')\n",
+    "plt.show()"
    ]
   },
   {
@@ -468,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "id": "86dd0a5d",
    "metadata": {},
    "outputs": [],
